css/style.css
/****** General ***********/
* {
  font-family: "Raleway", sans-serif;
  margin: 0;
  padding: 0;
}

*,
*::before,
*::after {
  box-sizing: border-box;
}

:root {
  --main-color: #0065fc;
  --main-bg-color: #f2f2f2;
  --filter-bg-color: #deebff;
}

.fa-solid {
  color: var(--main-color);
}

body {
  display: flex;
  justify-content: center;
  margin: auto;
}

.main-container {
  max-width: 1440px;
  width: 100%;
  padding: 0 50px;
}

a {
  color: inherit;
  text-decoration: none;
}

.section-title {
  margin: 0;
  font-size: 22px;
}

/****** Header ***********/

header {
  height: 79px;
  display: flex;
  justify-content: space-between;
  margin-bottom: 30px;
}

header a {
  display: flex;
  align-items: center;
}

#logo {
  width: 61px;
}

.menu {
  display: flex;
  gap: 68px;
  margin-bottom: 44px;
  font-weight: 400;
}

.menu a {
  height: 100%;
  display: flex;
  align-items: flex-end;
  border-top: transparent 2px solid;
}

.menu a:hover {
  color: var(--main-color);
  border-top: 2px solid var(--main-color);
}

/****** Main ***********/

/****** Hero ******/
h1 {
  font-size: 22px;
  margin-bottom: 8px;
}

form {
  display: flex;
  height: 49px;
  margin: 35px 0 35px 0;
}

.location-dot-case {
  border: 1px solid var(--main-bg-color);
  border-radius: 15px 0 0 15px;
  background-color: var(--main-bg-color);
  width: 50px;
  display: flex;
  justify-content: center;
  align-items: center;
}

.location-dot {
  color: #000000;
}

input {
  width: 195px;
  border: 1px solid var(--main-bg-color);
  font-size: 18px;
  font-weight: 700;
  text-align: center;
}

input:focus {
  outline: none;
}

input::placeholder {
  font-size: 18px;
  font-weight: 700;
  color: #000000;
  padding: 14px 24px 14px 24px;
}

input:focus::placeholder {
  color: transparent;
}

.search-button {
  background-color: var(--main-color);
  color: #ffffff;
  font-size: 18px;
  font-weight: 700;
  padding: 15px 16px 15px 16px;
  border: 1px solid var(--main-color);
  border-radius: 0 15px 15px 0;
  cursor: pointer;
}

.mobile-search-button {
  display: none;
  background-color: var(--main-color);
  border: none;
  width: 49px;
  border-radius: 15px;
  box-shadow: 0px 4px 4px 0px #00000040;
}

.filters {
  margin-bottom: 35px;
  display: flex;
  flex-wrap: wrap;
  align-items: center;
  gap: 15px;
}

.filters button {
  font-size: 17px;
  font-weight: 700;
  gap: 10px;
  padding: 15px 19px 15px 19px;
  display: flex;
  align-items: center;
  border: 2px solid #d9d9d9;
  border-radius: 25px;
  background-color: #ffffff;
  cursor: pointer;
}

.filters button:hover {
  background-color: var(--filter-bg-color);
}

.filter-icon {
  font-size: 22px;
  height: 22px;
  width: 22px;
  display: flex;
  justify-content: center;
  align-items: center;
}

h2 {
  font-size: 18px;
  font-weight: 700;
}

.info {
  height: 24px;
  display: flex;
  align-items: center;
  gap: 10px;
}

.info i {
  width: 24px;
  height: 24px;
  border: 1px solid #d9d9d9;
  border-radius: 50%;
  /* Permet à l'icone i d'être centré dans son cercle */
  display: flex;
  justify-content: center;
  align-items: center;
}

/****** Hebergements And Populaires ***********/
.hebergements-and-populaires {
  display: flex;
  justify-content: space-between;
  margin-top: 35px;
}

.hebergements-and-populaires section {
  background-color: var(--main-bg-color);
  border-radius: 20px;
  padding: 30px 30px 32.5px 30px;
}

.card {
  background-color: white;
  border-radius: 20px;
  filter: drop-shadow(0px 3px 15px rgba(0, 0, 0, 0.1));
}

.card img {
  object-fit: cover;
}

.card-title {
  font-size: 16px;
}

.euro {
  font-weight: 700;
}

.neutral-star {
  color: var(--main-bg-color);
}

/****** Hebergements ***********/
#hebergements {
  width: 65%;
}

.main-offers {
  display: flex;
  flex-wrap: wrap;
  gap: 30px;
  padding-top: 30px;
}

.main-offers a {
  flex: 1 1 30%;
}

.main-offers img {
  height: 124px;
  width: 100%;
  border-radius: 20px 20px 0 0;
  border: 5px solid #ffffff;
}

.main-offers .card-content {
  padding: 0 15px 0 15px;
  display: flex;
  flex-direction: column;
}

.main-offers .card-subtitle {
  font-size: 14px;
  font-weight: 400;
  margin: 8px 0 8px 0;
}

.main-offers .card-rating {
  margin-bottom: 15px;
}

.show-more {
  font-size: 18px;
  font-weight: 700;
}

/****** Populaires ***********/
.populaires {
  width: 32%;
}

.populaires-title {
  display: flex;
  justify-content: space-between;
  align-items: center;
}

.populaires-cards .card {
  display: flex;
  margin-top: 33px;
}

.populaires-cards img {
  width: 33%;
  height: 136px;
  border: 5px solid #ffffff;
  border-top-left-radius: 20px;
  border-bottom-left-radius: 20px;
}

.populaires-cards .card-content {
  width: 67%;
  padding-left: 15px;
  display: flex;
  flex-direction: column;
  justify-content: space-between;
}

.populaires-cards .card-title {
  margin-top: 10px;
  margin-bottom: 4px;
}

.populaires-cards .card-subtitle {
  margin: 0;
}

.populaires-cards .card-rating {
  margin-bottom: 5px;
}

/****** Activites ***********/

#activities {
  padding: 30px;
  margin-top: 35px;
}

.top-activities {
  display: flex;
  gap: 30px;
  padding-top: 30px;
}

.top-activities a {
  flex: 1;
}

#activities img {
  height: 380px;
  width: 100%;
  border-radius: 20px 20px 0 0;
}

#activities .card {
  display: flex;
  flex-direction: column;
}

#activities h3 {
  font-size: 16px;
  font-weight: 700;
  padding: 20px 19px 20px 19px;
  border-radius: 0 0 20px 20px;
}

/****** Footer ***********/
.menu-footer {
  display: flex;
  background-color: var(--main-bg-color);
}

.footer-colonne {
  display: flex;
  flex-direction: column;
  flex: 1;
  gap: 15px;
  padding: 20px 0 20px 20px;
}

/* Le code ci-dessous correspond à la version responsive uniquement */

/****** Media queries ***********/
/* Medium devices (tablets, less/equal than 1024px) */
@media (max-width: 1024px) {
  .filters-title {
    width: 100%;
  }

  .filters {
    margin-bottom: 35px;
    gap: 20px 15px;
  }

  .hebergements-and-populaires {
    flex-direction: column;
  }

  #hebergements {
    width: 100%;
  }

  .populaires {
    width: 100%;
    margin-top: 50px;
  }

  .populaires-cards {
    display: flex;
    gap: 20px;
  }

  .populaires-cards a {
    flex: 1;
  }

  .populaires-cards img {
    border-top: 5px solid #ffffff;
    border-left: 5px solid #ffffff;
    border-bottom: 5px solid #ffffff;
  }

  .populaires-cards .card-content {
    padding: 10px 5px 5px 15px;
  }

  .populaires-cards .card-title {
    font-size: 16px;
    margin-bottom: 5px;
  }

  .populaires-cards .card-subtitle {
    font-size: 13px;
  }
  .populaires-cards .card-rating {
    margin: 0;
  }

  #activities img {
    height: 200px;
  }

  #activities h3 {
    display: flex;
    align-items: center;
    padding: 0 19px 0 19px;
    height: 70px;
  }
}

/* Small devices (phones, less than 768px) */
@media (max-width: 767.98px) {
  .main-container {
    padding: 0;
  }

  .hero {
    padding: 0 20px 0 20px;
  }

  header {
    height: 115px;
    flex-direction: column;
    align-items: center;
  }

  /* Ajoute un padding uniquement sur le lien qui se trouve dans header soit le logo */
  header > a {
    padding: 30px;
  }

  .menu {
    height: 100%;
    width: 100%;
    gap: 0;
    margin-bottom: 0;
  }

  .menu a {
    flex: 1;
    justify-content: center;
    align-items: flex-start;
  }

  .menu a:hover {
    color: var(--main-color);
    border-top: hidden;
    border-bottom: 2px solid var(--main-color);
  }

  form {
    border: 1px solid var(--main-bg-color);
    border-radius: 15px;
  }

  .search-button {
    display: none;
  }

  input {
    flex: 1;
    border: none;
  }

  .mobile-search-button {
    display: flex;
    justify-content: center;
    align-items: center;
  }

  .magnifying-glass {
    color: #ffffff;
  }

  .filters {
    gap: 20px 10px;
  }

  .filters button {
    font-size: 14px;
    flex: 1;
  }

  .hebergements-and-populaires section {
    padding: 30px 20px 30px 20px;
    margin-top: 0;
    border-radius: 0;
  }

  .hebergements-and-populaires {
    flex-direction: column-reverse;
    gap: 15px;
  }

  .populaires-cards {
    display: block;
  }

  .populaires-cards .card-subtitle {
    font-size: 14px;
  }

  .populaires-cards .card {
    margin-top: 15px;
  }

  .hebergements-and-populaires #hebergements {
    background-color: #ffffff;
  }

  .main-offers {
    flex-direction: column;
    gap: 15px;
    padding-top: 15px;
  }

  .main-offers a {
    width: 100%;
  }

  .top-activities {
    flex-direction: column;
    gap: 15px;
  }

  .top-activities a {
    width: 100%;
  }

  #activities img {
    height: 141px;
  }

  .menu-footer {
    flex-direction: column;
    gap: 50px;
    padding-bottom: 30px;
    padding-top: 30px;
  }

  .footer-colonne {
    width: 100%;
    padding: 0 0 0 30px;
  }
}

